--- a/public/index.html
+++ b/public/index.html
@@ -1,70 +1,70 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Welcome to Firebase Hosting</title>
-    <style media="screen">
+    <title>RSN</title>
+    <style>
       body {
         font-family: Roboto, Arial, sans-serif;
         background: #ECEFF1;
         color: rgba(0,0,0,0.87);
       }
+     ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #a1afc9;
+    }
 
-      a {
-        color: rgb(3,155,229);
-      }
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
 
-      #message {
-        max-width: 400px;
-        margin: 40px auto;
-        box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2),0 1px 1px 0 rgba(0,0,0,0.14),0 2px 1px -1px rgba(0,0,0,0.12);
-        border-radius: 2px;
-        background: white;
-        padding: 16px 24px;
-      }
+/* Change the link color on hover */
+li a:hover {
+    background-color: #575a87;
+    color: white;
+}
 
-      #message h1 {
-        font-size: 22px;
-        font-weight: 500;
-        text-align: center;
-        margin: 0 0 16px;
-      }
+.boxed1 {
+    color :#575a87 ;
+    padding: 25px;
+    margin: 25px;
+}
+.verticalLine {
+  border-left: thick solid #575a87;
+  display: inline-block;
+}
+.main {
+  /*display: inline-block;*/
+  align-self: center
+  width:1000;
+}
 
-      #message p {
-        font-weight: 300;
-        line-height: 150%;
-      }
+</style>
 
-      #message ul {
-        list-style: none;
-        margin: 16px 0 0;
-        padding: 0;
-        text-align: center;
-      }
-
-      #message li a {
-        display: inline-block;
-        padding: 8px;
-        text-transform: uppercase;
-        text-decoration: none;
-        font-weight: 500;
-        background: rgb(3,155,229);
-        color: white;
-        border: 1px solid rgb(3,155,229);
-        border-radius: 3px;
-        font-size: 14px;
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
-      }
+      
     </style>
   </head>
   <body>
-    <div id="message">
-      <h1>Welcome to Firebase Hosting</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <h1>Sherif can't use Github</h1>
-      <ul>
-        <li><a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a></li>
+  <img src="RSN logo.png" width="150" height="150" align = "center">
+  <hr size="30" color="575a87">
+  <div id="whole">
+    <div class="verticalLine">
+      <ul id="l_list">
+      <li><a>Item 1</a></li>
+      <li><a>Item 2</a></li>
       </ul>
     </div>
+    <div class="main" id = "center" align ="center">
+      <h1 align ="center"><font size='9'>Welcome To</font></h1>
+      <h1 align ="center"><font size='7'>Riada Student Network! </font></h1>
+      <h1 align ="center">Please choose a section from the left to start</h1>
+    </div>
+  </div>
+    
   </body>
 </html>
