--- a/public/groups.html
+++ b/public/groups.html
@@ -1,16 +1,92 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>RSN</title>
 
   <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
+  
 
-  <a href="index.html">Home</a> <br>
+  <script>
 
-  <p id="gpid"></p>
+    function chooseGroup ( groupid ) {
+      sessionStorage.setItem('cg', groupid );
+    }
+  </script>
+    <style>
+      body {
+        font-family: Roboto, Arial, sans-serif;
+        background: #ECEFF1;
+        color: rgba(0,0,0,0.87);
+      }
+     ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #a1afc9;
+    }
 
-  Name: <input type="text" id="pname"> Leave blank for "Anonymous" <br>
-  Subject: <input type="text" size="40" id="psubject"><br>
-  Content: <br> <textarea rows="4" cols="50" id="pcontent"></textarea> <br>
-  <button disabled=true onclick="uploadPost();" id="postbutton">Post</button>
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
 
-  <script src="groups.js"></script>
+/* Change the link color on hover */
+li a:hover {
+    background-color: #575a87;
+    color: white;
+}
+
+.boxed1 {
+    color :#575a87 ;
+    padding: 25px;
+    margin: 25px;
+}
+.verticalLine {
+  border-left: thick solid #575a87;
+  display: inline-block;
+}
+.main {
+  /*display: inline-block;*/
+  align-self: center
+  width:1000;
+  LINE-HEIGHT:6px
+}
+
+</style>
+
+      
+    </style>
+  </head>
+  <body>
+  <img src="RSN logo.png" width="150" height="150" align = "center">
+  <hr size="30" color="575a87">
+  <div id="whole">
+    <div class="verticalLine">
+      <ul id="l_list">
+      <li><a href="groups.html" onclick="chooseGroup('test1');">Test1</a></li>
+      <li><a href="groups.html" onclick="chooseGroup('test2');">Test2</a></li>
+      </ul>
+    </div>
+
+
+    <div class="main" id = "center" align ="center">
+		  <h3><p id="gpid" ></p><h3>
+
+		  	<h3>Name: <input type="text" id="pname"></h3>
+		  	<h5>Leave blank for "Anonymous"</h5>
+		  <h3>Subject: <input type="text" size="40" id="psubject"></h3>
+		 <h3> Content: <br><br> <textarea rows="4" cols="50" id="pcontent"></textarea></h3>
+		  <button disabled=true onclick="uploadPost();" id="postbutton">Post</button>
+    </div>
+
+
+  </div>
+    
+  </body>
+  
+
+  <script src="groups.js"></script>	
 </html>
