Added posts display

--- a/public/groups.html
+++ b/public/groups.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-  <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
-
   <a href="index.html">Home</a> <br>
 
   <p id="gpid"></p>
@@ -12,5 +10,8 @@
   Content: <br> <textarea rows="4" cols="50" id="pcontent"></textarea> <br>
   <button disabled=true onclick="uploadPost();" id="postbutton">Post</button>
 
+  <p id="pdisplay"></p>
+
+  <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
   <script src="groups.js"></script>
 </html>
