--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,6 @@
   <head>
     <title>RSN</title>
 
-  
-
-  <script>
-    function chooseGroup ( groupid ) {
-      sessionStorage.setItem('cg', groupid );
-    }
-  </script>
     <style>
       body {
         font-family: Roboto, Arial, sans-serif;
@@ -54,7 +47,7 @@ li a:hover {
 
 </style>
 
-      
+
     </style>
   </head>
   <body>
@@ -73,6 +66,8 @@ li a:hover {
       <h1 align ="center">Please choose a section from the left to start</h1>
     </div>
   </div>
-    
+
   </body>
+
+  <script src="index.js"></script>
 </html>
