Fixed the html code thing for good and made a small tweak in the group.html

--- a/public/groups.html
+++ b/public/groups.html
@@ -79,7 +79,7 @@ li a:hover {
 
   </body>
 
-  <a href="index.html">Home</a> <br>
+  <!--<a href="index.html">Home</a>--> <br>
   <p id="pdisplay"></p>
   <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
   <script src="groups.js"></script>
