--- a/public/groups.html
+++ b/public/groups.html
@@ -60,6 +60,7 @@ li a:hover {
       <ul id="l_list">
       <li><a href="groups.html" onclick="chooseGroup('test1');">Test1</a></li>
       <li><a href="groups.html" onclick="chooseGroup('test2');">Test2</a></li>
+      <li><a href="index.html">Home</a></li>
       </ul>
     </div>
 
