Created the css file

--- a/public/groups.html
+++ b/public/groups.html
@@ -9,47 +9,7 @@
     }
   </script>
     <style>
-      body {
-        font-family: Roboto, Arial, sans-serif;
-        background: #ECEFF1;
-        color: rgba(0,0,0,0.87);
-      }
-     ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: #a1afc9;
-    }
-li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
-}
-/* Change the link color on hover */
-li a:hover {
-    background-color: #575a87;
-    color: white;
-}
-.boxed1 {
-    color :#575a87 ;
-    padding: 25px;
-    margin: 25px;
-}
-.verticalLine {
-  border-left: thick solid #575a87;
-  display: inline-block;
-}
-.main {
-  /*display: inline-block;*/
-  align-self: center
-  width:1000;
-  LINE-HEIGHT:6px
-}
-</style>
-
-
+     		 @import "LayoutStyle.css";
     </style>
   </head>
   <body>
