--- a/public/groups.html
+++ b/public/groups.html
@@ -32,7 +32,7 @@
 		  	<h5>Leave blank for "Anonymous"</h5>
 		  <h3>Subject: <input type="text" size="40" id="psubject"></h3>
 		 <h3> Content: <br><br> <textarea rows="4" cols="50" id="pcontent"></textarea></h3>
-		  <button disabled=true onclick="uploadPost();" id="postbutton">Post</button>
+		  <button style="background-color: #575a87; color: white; border: none;" disabled=true onclick="uploadPost();" id="postbutton">Post</button>
 		  <p id="pdisplay"></p>
     </div>
 
