--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>RSN</title>
-    <style>
-      @import "LayoutStyle.css";
-    </style>
+    <link rel="stylesheet" href="LayoutStyle.css">
   </head>
+
   <body>
   <img src="RSN logo.png" width="150" height="150" align = "center">
   <hr size="30" color="575a87">
   <div id="whole">
     <div class="verticalLine">
       <ul id="l_list">
-      <li><a href="groups.html" onclick="chooseGroup('test1');">Test1</a></li>
-      <li><a href="groups.html" onclick="chooseGroup('test2');">Test2</a></li>
+      <!--<li><a href="groups.html" onclick="chooseGroup('test1');">Test1</a></li> --->
       </ul>
     </div>
     <div class="main" id = "center" align ="center">
@@ -25,5 +24,7 @@
 
   </body>
 
-  <script src="index.js"></script>
+  <script src="chooseGroup.js"></script>
+  <script src="sidebar.js"></script>
+
 </html>
