layout fixes or just changes

--- a/public/groups.html
+++ b/public/groups.html
@@ -5,12 +5,10 @@
     <link rel="stylesheet" href="LayoutStyle.css">
   </head>
   <body>
-  <img src="RSN logo.png" width="150" height="150" align = "center">
+  <a href="index.html"><img src="RSN logo.png" width="150" height="150" align = "center"></a>
   <hr size="30" color="575a87">
   <div id="whole">
-    <div class="verticalLine">
-      <ul id="l_list"></ul>
-    </div>
+    
 
 
     <div class="main" id = "center" align ="center">
@@ -23,6 +21,10 @@
       <button style="background-color: #575a87; color: white; border: none;" disabled=true onclick="uploadPost();" id="postbutton">Post</button>
       <p id="pdisplay"></p>
     </div>
+    <div class="verticalLine">
+      <ul id="l_list"></ul>
+    </div>
+
 
   </div>
 
