--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,16 @@
   </head>
 
   <body>
-  <img src="RSN logo.png" width="150" height="150" align = "center">
+  <a href="index.html"><img src="RSN logo.png" width="150" height="150" align = "center"></a>
   <hr size="30" color="575a87">
   <div id="whole">
     <div class="verticalLine">
       <ul id="l_list">
-      <!--<li><a href="groups.html" onclick="chooseGroup('test1');">Test1</a></li> --->
+      <!--<li><a href="groups.html" onclick="chooseGroup('test1');">Test1</a></li> -->
       </ul>
     </div>
-    <div class="main" id = "center" align ="center">
+    <div class="main1" id = "center" align ="center">
+    <br>
       <h1 align ="center"><font size='9'>Welcome To</font></h1>
       <h1 align ="center"><font size='7'>Riada Student Network! </font></h1>
       <h1 align ="center">Please choose a section from the left to start</h1>
